mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/storageLayoutSpecifier/hex_address.sol
contract C layout at 0xdCad3a6d3569DF655070DEd06cb7A1b2Ccd1D3AF {}
// ----
// TypeError 1763: (21-63): The base slot of the storage layout must evaluate to an integer (the type is 'address' instead).
